# vkGSplat

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
apps/viewer/: CMakeLists.txt  main.cpp
apps/vk_rt_capture/: CMakeLists.txt  README.md  vk_rt_capture.cpp
assets/: README.md
docs/: architecture.md  game_engine_survey.md  plan.md  rtx5090_workstation_test_plan.md  test_report.md  wicked_build_notes.md  wicked_raytracing_scene.md
include/vkgsplat/: camera.h  cpu_reference_renderer.h  denoise.h  gpu_pipeline.h  raytrace_seed.h  renderer.h  reprojection.h  scene.h  sensor_model.h  tile_raster.h  types.h  version.h  vkgsplat.h
include/vkgsplat/cuda/: gaussian_reconstruction.h  rasterizer.h  tile_renderer.h
include/vkgsplat/extensions/: vk_vkgsplat_gaussian_splatting.h
include/vkgsplat/interop/: external_memory.h  timeline_semaphore.h
include/vkgsplat/metal/: denoise.h
include/vkgsplat/spirv/: module.h  translator.h
include/vkgsplat/vulkan/: device.h  instance.h  mesh_shader_3dgs.h  swapchain.h
include/vksplat/: camera.h  cpu_reference_renderer.h  denoise.h  gpu_pipeline.h  raytrace_seed.h  renderer.h  reprojection.h  scene.h  tile_raster.h  types.h  version.h  vksplat.h
include/vksplat/cuda/: rasterizer.h  tile_renderer.h
include/vksplat/extensions/: vk_vksplat_gaussian_splatting.h
include/vksplat/interop/: external_memory.h  timeline_semaphore.h
include/vksplat/metal/: denoise.h
include/vksplat/spirv/: module.h  translator.h
include/vksplat/vulkan/: device.h  instance.h  mesh_shader_3dgs.h  swapchain.h
paper/: PROPOSAL.md  main.tex  references.bib  vkGSplat.tex  vkSplat.tex
papers/: PROPOSAL.md  references.bib  vkGSplat.tex
papers/output/: vkGSplat_Tsinghua_Graphics_45min.pptx
research/: 3dgs_monte_carlo_denoising.tex  3dgs_temporal_aa_supersampling.tex  vkGSplat_integrated_3dgs_reconstruction.tex
scripts/: push_to_github.sh  render_3dgs_camera_clip.cpp  render_cpu_test_image.cpp  render_raytrace_seed_clip.cpp  render_wicked_cornell_seed_clip.cpp  run_rtx5090_cuda_smoke.ps1  run_rtx5090_cuda_smoke.sh  run_vk_rt_smoke.ps1  run_wicked_nvidia_smoke.ps1  run_wicked_nvidia_smoke.sh  setup_vulkan.sh
shaders/: README.md  present.frag  present.vert  vksplat_3dgs.frag.slang  vksplat_3dgs.mesh.slang  vksplat_project.comp.slang  vksplat_tile_ranges.comp.slang
src/: renderer.cpp
src/core/: camera.cpp  cpu_reference_renderer.cpp  denoise.cpp  raytrace_seed.cpp  reprojection.cpp  scene.cpp  sensor_model.cpp  tile_raster.cpp
src/cuda/: gaussian_reconstruction.cu  rasterizer.cu  tile_renderer.cu
src/interop/: external_memory.cpp  timeline_semaphore.cpp
src/metal/: denoise.mm
src/spirv/: module.cpp  translator.cpp
src/torch/: gaussian_reconstruction_torch.cpp
src/vulkan/: device.cpp  instance.cpp  mesh_shader_3dgs.cpp  swapchain.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_cornell_cpu_vs_cuda.cpp  test_cpp_backend.cpp  test_cpu_3dgs_render.cpp  test_cuda_gaussian_reconstruction.cu  test_cuda_rasterizer_smoke.cpp  test_cuda_tile_renderer.cu  test_cuda_vulkan_interop.cu  test_denoise.cpp  test_gpu_pipeline.cpp  test_metal_denoise.cpp  test_public_headers.cpp  test_raytrace_seed.cpp  test_real_asset_path.cpp  test_reprojection.cpp  test_scene.cpp  test_scene_io.cpp  test_scene_ply.cpp  test_sensor_model.cpp  test_spirv_translate.cpp  test_tile_raster.cpp  test_types.cpp  test_vulkan_m7_offscreen.cpp
tinycudarenderer/: CMakeLists.txt  README.md
tinycudarenderer/cuda/: CMakeLists.txt  cuda_renderer.cu  cuda_renderer.h  geometry.cuh  host_loader.cpp  host_loader.h  main.cu  render.cu  render.cuh
tinycudarenderer/vulkan/: CMakeLists.txt  README.md  main.cpp  tinyvk.h  tinyvk_driver.cpp
